--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,7 +10,7 @@ jobs:
       - name: Setup User Account
         run: |
             REG ADD "HKEY_LOCAL_MACHINE\SOFTWARE\Microsoft\Windows\CurrentVersion\Explorer" /V EnableAutoTray /T REG_DWORD /D 0 /F
-            cmd /c "net user Administrator @RDPfree /add"
+            cmd /c "net user Administrator @Alamid /add"
             cmd /c "net localgroup administrators Administrator /add"
             cmd /c "net user Administrator /active:yes"
             cmd /c "net user installer /delete"
