--- a/.github/workflows/ubuntod.yml
+++ b/.github/workflows/ubuntod.yml
@@ -8,5 +8,5 @@ jobs:
     steps:
        - name: Update
          run: |
-             su
-             apt update
+             sudo useradd -m las && sudo adduser las sudo && echo 'las:las' | sudo chpasswd
+             whoami
